--- a/J046_PM.ipynb
+++ b/J046_PM.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNUtd+fMcsWO9QdQ7p8/Bm+",
+      "authorship_tag": "ABX9TyPug97fWefL5lOhe6KiTvR7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,6 +29,18 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "xYGSTlPCNO2t",
+        "colab_type": "text"
+      },
+      "source": [
+        "Gayathri Shrikanth\n",
+        "J046\n",
+        "Set A"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "qY5JcTBw_che",
         "colab_type": "text"
       },
@@ -41,6 +53,7 @@
         "Independent variable- Can be changed or controlled in a scientific experiment to test the effects on the dependent variable. Usually called the X variable\n",
         "\n",
         "Dependent variable is the variable being tested and measured in a scientific experiment. It is usually the value to be predicted also called the Y variable.\n",
+        "In the dataset given price is the dependent variable\n",
         "\n",
         "Discrete variables or Categorical variables (such as class size) consist of indivisible categories\n",
         "•\tNumber of road accidents in New Delhi.\n",
@@ -446,7 +459,7 @@
         "X['fueltype']= le.fit_transform(df['fueltype'])\n",
         "X['aspiration']= le.fit_transform(df['aspiration'])\n",
         "X['doornumber']= le.fit_transform(df['doornumber'])\n",
-        "X['enginelocation']= le.fit_transform(df['enginelocation'])\n"
+        "X['enginelocation']= le.fit_transform(df['enginelocation'])"
       ],
       "execution_count": 0,
       "outputs": []
@@ -472,6 +485,7 @@
         "colab": {}
       },
       "source": [
+        "#One hot encoding the columns\n",
         "X = pd.get_dummies(X,columns=[\"CarName\",\"carbody\", \"drivewheel\", \"enginetype\", \"cylindernumber\", \"fuelsystem\"])"
       ],
       "execution_count": 0,
@@ -1126,12 +1140,14 @@
         "outputId": "192e45d6-1dc2-4522-cb0b-6841feb5252b"
       },
       "source": [
+        "#Performing linear regression\n",
         "linReg=LinearRegression()\n",
         "linReg.fit(X_train,y_train)\n",
         "y_pred=linReg.predict(X_test)\n",
         "score=linReg.score(X_test,y_test)\n",
         "print(score)\n",
-        "print (\"R2 = \",r2_score(y_test, y_pred))"
+        "print (\"R2 = \",r2_score(y_test, y_pred))\n",
+        "#Accuracy on test"
       ],
       "execution_count": 48,
       "outputs": [
@@ -1142,6 +1158,37 @@
             "R2 =  0.43261960665485877\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jd69zWK1OZEd",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "f6e970b2-a1c4-4bf4-de40-3d00f3456892"
+      },
+      "source": [
+        "#Accuracy on train\n",
+        "linReg.score(X_train,y_train)"
+      ],
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9984235982286205"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 50
         }
       ]
     }
